// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component render should render correctly - isDisabled 1`] = `
<Fragment>
  <TextInput
    aria-label="text input"
    className="ins-c-conditional-filter "
    data-ouia-component-type="PF4/TextInput"
    id="test-id"
    isDisabled={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    ouiaId="ConditionalFilter"
    value=""
    widget-type="InsightsInput"
  />
  <SearchIcon
    className="ins-c-search-icon"
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
  />
</Fragment>
`;

exports[`Text component render should render correctly 1`] = `
<Fragment>
  <TextInput
    aria-label="text input"
    className="ins-c-conditional-filter "
    data-ouia-component-type="PF4/TextInput"
    id="test-id"
    isDisabled={false}
    onChange={[Function]}
    onKeyDown={[Function]}
    ouiaId="ConditionalFilter"
    value=""
    widget-type="InsightsInput"
  />
  <SearchIcon
    className="ins-c-search-icon"
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
  />
</Fragment>
`;

exports[`Text component render should render placeholder 1`] = `
<Fragment>
  <TextInput
    aria-label="text input"
    className="ins-c-conditional-filter "
    data-ouia-component-type="PF4/TextInput"
    id="test-id"
    isDisabled={false}
    onChange={[Function]}
    onKeyDown={[Function]}
    ouiaId="ConditionalFilter"
    placeholder="some-placeholder"
    value=""
    widget-type="InsightsInput"
  />
  <SearchIcon
    className="ins-c-search-icon"
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
  />
</Fragment>
`;

exports[`Text component render should render value 1`] = `
<Fragment>
  <TextInput
    aria-label="text input"
    className="ins-c-conditional-filter "
    data-ouia-component-type="PF4/TextInput"
    id="test-id"
    isDisabled={false}
    onChange={[Function]}
    onKeyDown={[Function]}
    ouiaId="ConditionalFilter"
    value=""
    widget-type="InsightsInput"
  />
  <SearchIcon
    className="ins-c-search-icon"
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
  />
</Fragment>
`;
